# H2F_control

./: Cargo.toml  README.md  Rocket.toml  config.yaml  registers.json
Logo/: syst_global4.snp
src/: app_config.rs  control.rs  main.rs
static/: CompressorHMIDashboard.html  ConfigurationPanel.html  ErrorsDashboard.html  LiveDashboard.html  ProductionDashboard.html  index.html  welcome.css
static/css/: style.css
static/dashboard/: index.html
static/dashboard/js/: script.js
static/js/: Toast.js  script.js  script_config.js
