[package]
name = "h2f_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
modbus_device = { git = "https://github.com/lkzjdnb/modbus_device.git", branch = "async"}
custom_error = "1.9.2"
