[package]
name = "h2f_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
modbus_device = { git = "https://github.com/lkzjdnb/modbus_device.git", version = "0.1.1" }
s7_device = { git = "https://github.com/lkzjdnb/S7_devices.git", version = "0.1.1"}
industrial_device = { git = "https://github.com/lkzjdnb/industrial_device.git", version = "0.1.1" }
custom_error = "1.9.2"
clap = { version = "4.5.16", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }
serde = { version = "1.0.208", features = ["derive"] }
